--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,7 +10,8 @@ build: off  # будем использовать свой скрипт сбор
 
 install:
   # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
+  - java -jar ./artifacts/app-order.jar &
   - chmod +x gradlew
 
 build_script:
-  - ./gradlew test -Dselenide.headless=true --tests artifacts/app-order.jar
+  - ./gradlew test -Dselenide.headless=true
